changes made from theia lab environment

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Calculate Simple Interest</title>
+    <title>Web app- Simple Interest Calculator</title>
     </head>
     <body>
         <h1>Simple Interest Calculator</h1>
@@ -32,7 +32,7 @@
         <span id="result"></span>
         </div>
         <footer>
-            &#169; This Calculator belongs to Nida
+            &#169; Everyone Can Get Rich
         </footer>
     </body>
 </html>
